vendor/zerocopy/tests/ui-nightly/diagnostic-not-implemented-immutable.stderr
error[E0277]: the trait bound `NotZerocopy: Immutable` is not satisfied
  --> tests/ui-nightly/diagnostic-not-implemented-immutable.rs:16:23
   |
16 |     takes_immutable::<NotZerocopy>();
   |                       ^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `Immutable` is not implemented for `NotZerocopy`
  --> tests/ui-nightly/../include.rs
   |
   |     pub struct NotZerocopy<T = ()>(pub T);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: Consider adding `#[derive(Immutable)]` to `NotZerocopy`
   = help: the following other types implement trait `Immutable`:
             &T
             &mut T
             ()
             (A, B)
             (A, B, C)
             (A, B, C, D)
             (A, B, C, D, E)
             (A, B, C, D, E, F)
           and $N others
note: required by a bound in `takes_immutable`
  --> tests/ui-nightly/diagnostic-not-implemented-immutable.rs:19:23
   |
19 | fn takes_immutable<T: Immutable>() {}
   |                       ^^^^^^^^^ required by this bound in `takes_immutable`
